--- a/crud/package.json
+++ b/crud/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "empezar": "node ./bin/www",
-    "startd": "nodemon ./bin/www"
+    "start": "node ./bin/www",
+    "startn": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
